[package]
name = "pmhelp-derive"
version = "0.0.1"
edition = "2018"
homepage = "https://github.com/russells-crockpot/pmhelp"
repository = "https://github.com/russells-crockpot/pmhelp"
description = "Derive macros that will be used by `pmhelp`."
#documentation = "https://docs.rs/pmhelp-derive/"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1"
quote = "1"
bitflags = "1"
syn = "1"

[dependencies.pmhelp-internal]
path = "../internal"
version = "0.0.1"

[dependencies.pmhelp-internal-macros]
path = "../internal/macros"
version = "0.0.1"

[dependencies.pmhelp-derive-macros]
path = "./macros"
version = "0.0.1"
