[package]
name = "pmhelp"
version = "0.0.1"
edition = "2018"
license = "MIT"
description = "A WIP library to assist in the creation of procedural macros."
homepage = "https://github.com/russells-crockpot/pmhelp"
repository = "https://github.com/russells-crockpot/pmhelp"
documentation = "https://docs.rs/pmhelp/"
keywords = ["macros", "procedural-macros"]
categories = ["rust-patterns", "no-std", "development-tools::procedural-macro-helpers"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

#[dependencies.pmhelp-derive]
#path = "../derive"
#optional = true
#version = "0.0.1"

#[features]
#default = ["derive"]
#derive = ["pmhelp-derive"]
